--- a/styles.css
+++ b/styles.css
@@ -384,6 +384,8 @@ header a{
         transition: 0.3s;
     }
 
+
+
     .botonMovil button:hover{
         transition: 0.3s;
         font-weight: 500;
@@ -413,10 +415,19 @@ header a{
 
 @media (max-width:550px){
 
+    .sobreMi h2{
+
+        padding: 0px;
+
+    }
     .sobreMi p{
 
-        width: 90%;
+        width: 100%;
 
+    }
+
+    .sobreMi{
+        padding: 30px;
     }
     
 }
@@ -524,7 +535,7 @@ header a{
 .letrasMapamundi{
     color: white;
     width: 50%;
-    padding: 50px;
+    padding: 20px;
     height: 60%;
     display: flex;
     flex-direction: column;
@@ -560,7 +571,6 @@ header a{
 }
 
 .botonesAppyPrototipo{
-    height: 40px;
     align-content: center;
     width: 100%;
     display: flex;
@@ -599,16 +609,18 @@ header a{
     position: relative;
     z-index: 1;
     margin-top: -40px;
-
     text-align: center;
     padding: 20px;
     color: white;
-    padding: 60px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
     height: 40vh;
+}
+.letrasPlansLanding p{
+    width: 80%;
+
 }
 
 
@@ -667,7 +679,6 @@ header a{
     color: white;
     width: 50%;
     padding: 50px;
-    height: 60%;
     font-family: 'Inter';
     display: flex;
     flex-direction: column;
@@ -755,11 +766,20 @@ header a{
     .letrasPlansLanding{
         width: 100%;
     }
+    .letrasPlansLanding p{
+        width: 100%;
+    
+    }
     .imagenMovieList{
         display: none;
     }
     .letrasMovieList{
         width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
     }
     .card p{
         padding-bottom: 30px;
@@ -770,9 +790,16 @@ header a{
 }
 
 
-@media (max-width:425){
+@media (max-width:425px){
     .imagenMapamundi img{
         height: 40vh !important;
+    }
+    .letrasMapamundi{
+        margin-top: 0px;
+        height:100%;
+    }
+    .card p{
+        padding-bottom: 0px;
     }
     
 
@@ -794,6 +821,7 @@ header a{
     flex-direction: column;
     align-items: center;
     padding: 50px ;
+    height: 60vh;
 }
 
 .contacto h2 {
@@ -924,6 +952,8 @@ footer .footerContent .brand {
     text-decoration-color: #0ACF83;
     text-underline-offset: 5px;
 }
+
+
 .brand p{
     padding-left: 60px;
     font-size: 18px;
@@ -964,7 +994,7 @@ footer .footerContent .socials img:hover {
 .scroll-to-top {
     position: fixed;
     bottom: 60px; 
-    right: 60px; 
+    left: 60px; 
     width: 50px;
     height: 50px;
     background-color: #243356;
