--- a/responsive.css
+++ b/responsive.css
@@ -60,15 +60,16 @@
     .imagenMovieList {
         display: none;
     }
+
+    .imagenMapamundi{
+        width: 0%;
+    }
     .letrasMapamundi,
     .letrasPlansLanding,
     .letrasMovieList {
         width: 100%;
     }
-    .letrasPlansLanding img {
-        width: 80%;
-        height: 100%;
-    }
+    
     .letrasMovieList {
         display: flex;
         flex-direction: column;
@@ -150,6 +151,9 @@
     .scroll-to-top {
         right: -100px;
     }
+    .contacto{
+        height: auto;
+    }
 }
 
 @media (max-width: 500px), (min-width: 0px) and (max-height: 425px) {
@@ -182,9 +186,7 @@
 }
 
 @media (max-width: 425px) {
-    .proyectoPlansLanding{
-        display: none;
-    }
+    
     .imagenMapamundi img {
         height: 40vh !important;
     }
